wk_taa_taaqa/src/objects/market_segment_rules__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Is used to determine Revenue based or Employee count based to stamp sub segment on Account</description>
    <fields>
        <fullName>IsSubSegmentBasedOnAnnualRevenue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSubSegmentBasedOnAnnualRevenue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSubSegmentBasedOnEmployeeCount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSubSegmentBasedOnEmployeeCount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <externalId>true</externalId>
        <label>Segment</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Market Segment Rules</label>
</CustomObject>